--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
+    "guid-typescript": "^1.0.9",
     "next": "^14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
@@ -42,7 +44,7 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.0.3"
   },
   "engines": {
     "node": ">=18.17.0"
