Added script for linting

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "next build",
     "cypress:open": "cypress open",
     "dev": "next dev",
+    "lint": "next lint",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "seed": "node -r dotenv/config ./scripts/seed.js",
