--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.490.0",
-    "@aws-sdk/lib-dynamodb": "^3.490.0",
-    "@emotion/cache": "latest",
-    "@emotion/react": "latest",
-    "@emotion/styled": "latest",
-    "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "latest",
-    "@mui/material": "latest",
-    "@mui/material-nextjs": "latest",
-    "@mui/x-date-pickers": "^6.19.2",
+    "@aws-sdk/client-dynamodb": "^3.563.0",
+    "@aws-sdk/lib-dynamodb": "^3.563.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-date-pickers": "^6.19.9",
     "@types/node": "20.5.7",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
     "guid-typescript": "^1.0.9",
-    "next": "^14.0.2",
+    "next": "^14.2.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,19 +34,19 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
-    "zod": "^3.22.2"
+    "zod": "^3.23.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
-    "@vercel/style-guide": "^5.0.1",
-    "cypress": "^13.6.4",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0",
+    "@vercel/style-guide": "^5.2.0",
+    "cypress": "^13.8.1",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "9.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.2.5"
   },
   "engines": {
     "node": ">=18.17.0"
