--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.10",
     "guid-typescript": "^1.0.9",
     "next": "^14.2.3",
+    "next-auth": "^5.0.0-beta.17",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
