--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,14 @@
 services:
   server:
     build:
-      context: .
+      context: ./server
       target: prod
     environment:
       AUTH_TRUST_HOST: true
       DYNAMO_DB_HOST: dynamodb
       DYNAMO_DB_PORT: 8000
-      DYNAMO_DB_REGION: 'eu-central-1'
-      DYNAMO_DB_TABLE: 'Transactions-QA'
+      DYNAMO_DB_REGION: "eu-central-1"
+      DYNAMO_DB_TABLE: "Transactions-QA"
       AUTH_SECRET: M/INNJfFxFXnzsMFAJzEpMai3ZDn5ip0LrkbXM4UqSo=
       AUTH_COGNITO_ID: 2tvrccm0t62g6cl5un8meqgm9
       AUTH_COGNITO_SECRET: 11je0rpcvhae9qh3sbllafc1d9k9hgb9klhso3behlkpih56m7fs
@@ -19,10 +19,10 @@ services:
       - dynamodb
   dynamodb:
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data --cors 'http://server:3000'"
-    image: 'amazon/dynamodb-local:latest'
+    image: "amazon/dynamodb-local:2.4.0"
     container_name: dynamodb
     ports:
       - 8000:8000
     volumes:
-      - './db/dynamodb:/home/dynamodblocal/data'
+      - "./db/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
