--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@jest/globals": "29.7.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/bcrypt": "^5.0.2",
