--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   server:
     build:
       context: ./server
-      target: prod
+      target: dev
     environment:
       AUTH_TRUST_HOST: true
       DYNAMO_DB_HOST: dynamodb
@@ -17,6 +17,8 @@ services:
       - 3000:3000
     depends_on:
       - dynamodb
+    volumes:
+      - ./server:/usr/src/avar
   dynamodb:
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data --cors 'http://server:3000'"
     image: "amazon/dynamodb-local:2.4.0"
