--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,15 @@ FROM node:${NODE_VERSION}-alpine as base
 WORKDIR /usr/src/avar
 EXPOSE 3000
 
+RUN --mount=type=secret,id=cognito_client_id \
+    AUTH_COGNITO_ID=$(cat /run/secrets/cognito_client_id)
+RUN --mount=type=secret,id=cognito_client_secret \
+    AUTH_COGNITO_SECRET=$(cat /run/secrets/cognito_client_secret)
+RUN --mount=type=secret,id=cognito_issuer \
+    AUTH_COGNITO_ISSUER=$(cat /run/secrets/cognito_issuer)
+RUN --mount=type=secret,id=auth_js_secret \
+    AUTH_SECRET=$(cat /run/secrets/auth_js_secret)
+
 FROM base as dev
 ENV NODE_ENV development
 RUN --mount=type=bind,source=package.json,target=package.json \
