--- a/server/package.json
+++ b/server/package.json
@@ -54,7 +54,8 @@
     "eslint-config-prettier": "9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "sass": "^1.77.6"
   },
   "engines": {
     "node": ">=18.17.0"
