--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -40,6 +40,10 @@ jobs:
       AUTH_TRUST_HOST: true
       DYNAMO_DB_REGION: "eu-central-1"
       DYNAMO_DB_TABLE: "Transactions-QA"
+      AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+      AUTH_COGNITO_ID: ${{ secrets.AUTH_COGNITO_ID }}
+      AUTH_COGNITO_SECRET: ${{ secrets.AUTH_COGNITO_SECRET }}
+      AUTH_COGNITO_ISSUER: ${{ secrets.AUTH_COGNITO_ISSUER }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
