--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -48,13 +48,13 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         env:
-          CYPRESS_AUTH_TRUST_HOST: true
-          CYPRESS_DYNAMO_DB_REGION: "eu-central-1"
-          CYPRESS_DYNAMO_DB_TABLE: "Transactions-QA"
-          CYPRESS_AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
-          CYPRESS_AUTH_COGNITO_ID: ${{ secrets.AUTH_COGNITO_ID }}
-          CYPRESS_AUTH_COGNITO_SECRET: ${{ secrets.AUTH_COGNITO_SECRET }}
-          CYPRESS_AUTH_COGNITO_ISSUER: ${{ secrets.AUTH_COGNITO_ISSUER }}
+          AUTH_TRUST_HOST: true
+          DYNAMO_DB_REGION: "eu-central-1"
+          DYNAMO_DB_TABLE: "Transactions-QA"
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          AUTH_COGNITO_ID: ${{ secrets.AUTH_COGNITO_ID }}
+          AUTH_COGNITO_SECRET: ${{ secrets.AUTH_COGNITO_SECRET }}
+          AUTH_COGNITO_ISSUER: ${{ secrets.AUTH_COGNITO_ISSUER }}
         with:
           start: npm start
           browser: chrome
