--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -17,5 +17,12 @@ jobs:
           port: 8000
           cors: "'http://127.0.0.1:3000','http://localhost:3000'"
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: xxxx
+          aws-secret-access-key: xxxx
+          aws-region: eu-central-1
+    
       - name: Check DynamoDB
         run: aws dynamodb list-tables --endpoint-url http://localhost:8000
