--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           aws-access-key-id: ASIAY34FZKBOKMUTVV7A
           aws-secret-access-key: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+          aws-region: eu-central-1
           
       - name: Check DynamoDB
         run: aws dynamodb list-tables --endpoint-url http://localhost:8000 --region eu-central-1
