--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Configure other AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ASIAY34FZKBOKMUTVV7A
-          aws-secret-access-key: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
           aws-region: eu-central-1
           
       - name: Check DynamoDB
