--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -15,7 +15,7 @@ jobs:
           dbPath: ./db/dynamodb
           sharedDb: true
           port: 8000
-          cors: "'http://127.0.0.1:3000','http://localhost:3000'"
+          cors: "*"
 
       - name: Configure other AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
