--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Setup DynamoDB Local
         uses: rrainn/dynamodb-action@v2.0.1
         with:
+          dbPath: ./db/dynamodb
           sharedDb: true
           cors: "*"
 
