--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -20,6 +20,6 @@ jobs:
           aws-region: eu-central-1
           
       - name: Check DynamoDB
-        run: aws dynamodb list-tables --endpoint-url http://127.0.0.1:8000 --region eu-central-1
+        run: aws dynamodb list-tables --endpoint-url http://localhost:8000 --region eu-central-1
         env:
           AWS_EC2_METADATA_DISABLED: true
