--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -18,8 +18,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET }}
           aws-region: eu-central-1
-          
+
       - name: Check DynamoDB
         run: aws dynamodb list-tables --endpoint-url http://localhost:8000 --region eu-central-1
         env:
           AWS_EC2_METADATA_DISABLED: true
+
+      - name: Check DynamoDB logs
+        run: sudo docker logs dynamodb-manual
