--- a/.github/workflows/dynamo-db-deploy.yml
+++ b/.github/workflows/dynamo-db-deploy.yml
@@ -9,6 +9,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set DynamoDb permissions
+        run: sudo chmod -R 777 ./db
+        
       - name: Setup DynamoDB Local
         run: sudo docker run --name dynamodb-manual -d -p 8000:8000 --mount type=bind,source=./db/dynamodb,target=/home/dynamodblocal/data -w /home/dynamodblocal amazon/dynamodb-local:2.4.0 -jar DynamoDBLocal.jar -sharedDb -dbPath ./data --cors "*"
 
